<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".RegisterActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_anchor="@+id/textView4"
        app:layout_anchorGravity="bottom|center">

        <ImageView
            android:layout_width="448dp"
            android:layout_height="133dp"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="21dp"
            android:src="@drawable/logo_kamyon" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="265dp"
        android:text="@string/Texto1"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout

        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="351dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnIngrEmpr"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:backgroundTint="@color/red"
            android:gravity="center"
            android:text="@string/Btn_1"
            android:textSize="22sp"
            android:textStyle="bold"
            app:iconTint="@color/red" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="30dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="469dp"
        android:text="@string/Texto2"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="515dp"
        android:gravity="center"
        android:text="@string/SubTexto"
        android:textAlignment="gravity"
        android:textColor="@color/gray"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="center"/>

    <Button
        android:id="@+id/btnIngrTrans"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="424dp"
        android:backgroundTint="@color/red"
        android:text="@string/Btn_2"
        android:textSize="22sp"
        android:textStyle="bold"
        app:iconTint="@color/red"

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:text="@string/SubTexto2"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_anchor="@+id/textView"
        app:layout_anchorGravity="bottom|center" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>
